--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -26,3 +26,7 @@ body {
 
 @import 'src/assets/sass/blocks/page';
 @import 'src/assets/sass/blocks/header';
+@import 'src/assets/sass/blocks/up_nav';
+@import 'src/assets/sass/blocks/banner';
+@import 'src/assets/sass/blocks/basket';
+@import 'src/assets/sass/blocks/contacts';
