--- a/src/assets/sass/blocks/basket.scss
+++ b/src/assets/sass/blocks/basket.scss
@@ -16,7 +16,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    font-family: Roboto;
+    //font-family: Roboto;
     font-size: 14px;
     font-weight: 400;
     text-decoration: underline;
