--- a/src/assets/sass/blocks/contacts.scss
+++ b/src/assets/sass/blocks/contacts.scss
@@ -3,11 +3,12 @@
 .contacts {
     width: 183px;
     color: #252525;
+    white-space: nowrap;
+    //font-family: Roboto;
 
     &--time {
         display: flex;
         justify-content: space-between;
-        font-family: Roboto;
         font-size: 12px;
         font-weight: 700;
 
@@ -18,7 +19,6 @@
 
     &--tel {
         border-bottom: 1px solid #d9d9d9;
-        font-family: Roboto;
         font-size: 25px;
         font-weight: 700;
         line-height: 60px;
@@ -27,7 +27,6 @@
     &--city {
         display: flex;
         justify-content: space-between;
-        font-family: Roboto;
         font-size: 12px;
         line-height: 1.2;
         font-weight: 400;
