--- a/src/assets/sass/blocks/up_nav.scss
+++ b/src/assets/sass/blocks/up_nav.scss
@@ -6,7 +6,7 @@
     border-bottom: solid #d9d9d9 1px;
     width: 930px;
     height: 20px;
-    font-family: Roboto;
+    //font-family: Roboto;
     font-size: 12px;
     font-weight: 400;
     color: #252525;
