--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -30,3 +30,4 @@ body {
 @import 'src/assets/sass/blocks/banner';
 @import 'src/assets/sass/blocks/basket';
 @import 'src/assets/sass/blocks/contacts';
+@import 'src/assets/sass/blocks/down_nav';
