--- a/src/assets/sass/blocks/down_nav.scss
+++ b/src/assets/sass/blocks/down_nav.scss
@@ -17,7 +17,7 @@
 }
 
 .down_nav--list {
-    //font-family: Roboto;
+    font-family: 'robotobold';
     font-size: 16px;
     font-weight: 700;
     color: #fff;
@@ -57,7 +57,7 @@
     border-bottom-right-radius: 10px;
     background: #ffcc00;
     border: none;
-    //font-family: Roboto;
+    font-family: 'roboto_bkbold';
     font-size: 14px;
     line-height: 1.2;
     font-weight: 700;
