--- a/src/assets/sass/blocks/header.scss
+++ b/src/assets/sass/blocks/header.scss
@@ -19,7 +19,7 @@
 }
 
 .header--logo-text {
-    //font-family: HeliosCond;
+    font-family: 'robotobold';
     font-size: 12px;
     line-height: 1.2;
     font-weight: 700;
