--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -1,5 +1,6 @@
 /* Default styles */
 
+@import '../fonts/roboto/roboto.css';
 @import 'src/assets/sass/normalize';
 @import 'src/assets/sass/vars';
 
