--- a/src/assets/sass/blocks/up_nav.scss
+++ b/src/assets/sass/blocks/up_nav.scss
@@ -24,5 +24,12 @@
     display: flex;
     justify-content: space-between;
     list-style-type: none;
-    cursor: pointer;
+
+
+    li {
+        &:hover {
+            cursor: pointer;
+            color: #7c7c7c;
+        }
+    }
 }
