--- a/src/assets/sass/blocks/down_nav.scss
+++ b/src/assets/sass/blocks/down_nav.scss
@@ -9,11 +9,8 @@
     width: 1170px;
     height: 34px;
     justify-content: space-between;
-
-    .clear {
-        width: 24px;
-        background: #252525;
-    }
+    background: #252525;
+    border-radius: 50px;
 }
 
 .down_nav--list {
@@ -21,7 +18,6 @@
     font-size: 16px;
     font-weight: 700;
     color: #fff;
-    background: #252525;
 
     li {
         display: flex;
@@ -40,8 +36,8 @@
 .down_nav--search {
     cursor: pointer;
     width: 45px;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
+    border-top-left-radius: 12px;
+    border-bottom-left-radius: 12px;
     background: #ffcc00;
     border: none;
 
@@ -53,8 +49,8 @@
 
 .down_nav--sale {
     cursor: pointer;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-top-right-radius: 12px;
+    border-bottom-right-radius: 12px;
     background: #ffcc00;
     border: none;
     font-family: 'roboto_bkbold';
